Proyecto2/kubernetes/ingress/igrpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: my-backend-services
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST
  namespace: so1-proyecto1
spec:
  rules:
  - host: api.34.66.60.225.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-api
            port:
              number: 4200
  - host: 34.66.60.225.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-grpc
            port:
              number: 3300
